Fix broken layout when content is long in ModifyProfile dialog

--- a/app/components/dialog/components/modifyProfile/modifyProfile.scss
+++ b/app/components/dialog/components/modifyProfile/modifyProfile.scss
@@ -48,7 +48,7 @@
 }
 
 .contentSection {
-  height: 314px;
+  min-height: 314px;
   margin: 24px 0;
 
   .formControl {
